Issue #671: Responsive admin tabs in Seven theme
Left aligned the primary tasks because it saves us some headache, and as the Seven team from D8 pointed out, they're easy to ignore for newbies when they're right aligned.

Added custom JS
 * Detects when webfonts have loaded before calculating if tabs should be responsive
 * Have three strategies for handling tabs that don't fit, depending on what we're able to fit
 * Tabs that don't fit get a dropdown type treatment, and at phone sizes, all tabs go into a dropdown

Added custom CSS:
 * If you don't have JS working/enabled, the tabs will behave as regular floats and will clear to the next line pushing the page down if they don't fit
 * If you do have JS:
   * Tabs will disappear when they don't fit on the screen
   * Clicking on the toggle they will show as a dropdown on the right side of the screen

--- a/core/modules/system/css/system.theme.css
+++ b/core/modules/system/css/system.theme.css
@@ -365,18 +365,18 @@ ul.inline li {
 /**
  * Markup generated by theme_menu_local_tasks().
  */
-ul.primary {
-  height: 2em;
-  line-height: 1.2;
-  list-style: none;
-  margin: 0 0 0 2px;
-  padding: 0;
-  overflow: hidden;
-  white-space: nowrap;
-}
-ul.primary li {
-  float: left; /* LTR */
-  margin: 0 0.15em 0 0; /* LTR */
+@media only screen and (min-width: 1000px) {
+  ul.primary {
+    line-height: 1.2;
+    list-style: none;
+    margin: 0 0 0 2px;
+    padding: 0;
+    white-space: nowrap;
+  }
+  ul.primary li {
+    float: left; /* LTR */
+    margin: 0 0.15em 0 0; /* LTR */
+  }
 }
 [dir="rtl"] ul.primary li,
 [dir="rtl"] ul.primary li a:link,
